--- a/utils_etc/Setup_circumstance_for_MachineLearning_memo.ipynb
+++ b/utils_etc/Setup_circumstance_for_MachineLearning_memo.ipynb
@@ -15,6 +15,8 @@
     "  \n",
     "#### 前提\n",
     "　・nvidia-dockerを利用する  \n",
+    "　・python2でよければgcr.io/tensorflow/tensorflow:latest-gpu がそのまま使える  \n",
+    "　　今回はpython3前提のため作業が必要  \n",
     "  \n",
     "#### 実行した環境\n",
     "　ハードウェア  \n",
@@ -27,6 +29,9 @@
     "　　image : nvidia/cuda:8.0-cudnn5-devel\n",
     "  　\n",
     "#### 参考\n",
+    "[Using TensorFlow via Docker](https://github.com/tensorflow/tensorflow/tree/master/tensorflow/tools/docker)  \n",
+    "[TensorFlowが動作するDockerの開発環境を構築する](https://deepage.net/tensorflow/2017/02/14/tensorflow-docker.html)  \n",
+    "  \n",
     "[Docker Documentation](https://docs.docker.com/)    \n",
     "[Dockerの使い方](https://qiita.com/tera_shin/items/efde65d2f875c5d8592a)by tera_shin  \n",
     "[Dockerで作るJupyter Notebook開発環境](https://qiita.com/inu1one/items/075c372059370f6af909) by inu1one     \n",
@@ -38,32 +43,27 @@
    "metadata": {},
    "source": [
     "#### 行った手順\n",
-    "＜イメージ作成と動作確認＞  \n",
-    "　１．nvidia/cuda:8.0-cudnn5-develを継承し、必要なものをインストールするDockerfileを書いた   \n",
+    "　１．gcr.io/tensorflow/tensorflow:latest-gpu を継承し、必要なものをインストールするDockerfileを書いた   \n",
     "　２．docker build 実行  \n",
     "　３．作成したイメージからコンテナ立ち上げ  \n",
-    "　４．jupyter notebook --ip=0.0.0.0 --allow-root 実行  \n",
-    "　５．外部のブラウザから 0.0.0.0:指定したouter_ip/?token=<表示されたトークン> にアクセス　->　成功  \n",
-    "　６．jupyterから!nvidia-smi実行 -> 成功  \n",
-    "   \n",
-    "＜各種設定＞  \n",
-    "　７．作業用ユーザを設定  \n",
-    "　８．jupyter notebook --generate-config を実行してjupyter_notebook_config.py ファイルを生成    \n",
-    "　９．次のようにconfigファイルに追記      \n",
-    "  \n",
-    "```python\n",
-    "c.IPKernelApp.pylab = 'inline'\n",
-    "c.NotebookApp.ip = '*'\n",
-    "c.NotebookApp.open_browser = False\n",
-    "c.NotebookApp.port = <コンテナ内部での待受ポート>\n",
-    "c.NotebookApp.password = u'<パスワードのハッシュ値>'\n",
+    "　　　元のイメージと同じくjupyter notebookが自動で立ち上がる  \n",
+    "　４．外部のブラウザから localhost:指定したouter_ip/?token=<表示されたトークン> にアクセス　->　成功  \n",
+    "　５．jupyterから!nvidia-smi実行、tensorflow-gpu動作 -> 成功  \n",
+    "\n",
+    "#### 実行コマンド例\n",
+    "\n",
     "```\n",
-    "   \n",
-    "　10．jupyter notebook 立ち上げをシェルスクリプトとして作成  \n",
-    "　11．docker commit してコンテナから設定済みイメージを作成  \n",
-    "　12．docker run から上のシェルスクリプト実行までを外部でシェルスクリプト化  \n",
-    "   \n",
-    "以上により手軽にGPUの使えるJupyter Notebookを立ち上げられるようになった。  "
+    "nvidia-docker run \n",
+    " -it \n",
+    " -p 9999:8888\n",
+    " -v [host_dir]:[in_container_dir]\n",
+    " [image_name]:[tag]\n",
+    "\n",
+    "```\n",
+    "-p ホスト側ポート：コンテナ側ポート  \n",
+    "　　外からホスト側ポート番号へのアクセスを内側でコンテナ側ポート番号へ振り分ける  \n",
+    "-v コンテナ内の指定ディレクトリにホスト側ディレクトリをマウントする  \n",
+    "  "
    ]
   },
   {
