--- a/Syoukai_DeepLearning_4.ipynb
+++ b/Syoukai_DeepLearning_4.ipynb
@@ -1297,6 +1297,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 4, 0],\n",
+       "       [0, 0, 9]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a=np.array([1,2,3])\n",
+    "a.size\n",
+    "\n",
+    "b = np.diag(np.power(a,2))\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -1304,16 +1331,21 @@
     "import numpy as np\n",
     "\n",
     "def gradient_descent(X, f, lr=0.01):\n",
-    "    return X - lr * f.dloss(X)\n",
+    "    return [X - lr * f.dloss(X),]\n",
     "\n",
     "def momentum(X, f, v=np.zeros(2), lr=0.01, gamma=0.90):\n",
     "    v = gamma * v + lr * f.dloss(X)\n",
-    "    return X - v, v\n",
+    "    return [X - v, v]\n",
     "\n",
     "def nesterov_momentum(X, f, v=np.zeros(2), lr=0.01, gamma=0.90):\n",
     "    v = gamma * v + lr * f.dloss(X - gamma*v)\n",
-    "    return X - v, v\n",
-    "\n"
+    "    return [X - v, v]\n",
+    "\n",
+    "def adagrad(X, f, h=np.diag(np.zeros(X.size)), lr=0.01, epsilon=1e-8):\n",
+    "    h += np.diag(np.power(f.dloss(X), 2))\n",
+    "    return [X - lr * (1/np.sqrt(h + epsilon)) * f.dloss(X), h]\n",
+    "\n",
+    "def rmsprop(X, f, )\n"
    ]
   },
   {
@@ -1356,7 +1388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loss function with two local minimal\n",
+    "# loss function 2 :  with two local minimal\n",
     "class loss_f(object):\n",
     "    def loss(X, Y):\n",
     "        return np.array(0.02 * X**4 - X**2 - X + 0.5 * Y**2)\n",
