--- a/Language_processing_100.ipynb
+++ b/Language_processing_100.ipynb
@@ -253,6 +253,15 @@
     "---\n",
     "WIP"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
