--- a/Syoukai_DeepLearning_5.ipynb
+++ b/Syoukai_DeepLearning_5.ipynb
@@ -31,7 +31,7 @@
     "f(t) &= \\sin \\left( \\frac{2 \\pi}{T}t \\right) & (t=1,\\dots, 2T)\n",
     "\\end{align*}\n",
     "\n",
-    "さらに、このデータに-1から+1までの値を取る一様分布Uに従う確率変数uの0.05倍をノイズとして加える。"
+    "さらにノイズとして、-1から+1までの値を取る一様分布Uに従う確率変数uの0.05倍を加え、観測値とする。"
    ]
   },
   {
@@ -72,6 +72,43 @@
    "source": [
     "---\n",
     "### 過去の状態を保持する隠れ層"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "時系列データでは各タイムステップのデータに相関があることから  \n",
+    "隠れ層１層を含む３層ニューラルネットワークについて  \n",
+    "前タイムステップにおける隠れ層の情報を隠れ層自身に入力して時系列データに適応させることを考える。  \n",
+    "  \n",
+    "入力層から隠れ層への入力の重みと活性化関数をそれぞれU、f、隠れ層から出力層への重みと活性化関数をV、g、  \n",
+    "隠れ層から隠れ層自身への重みをWとする。  \n",
+    "このとき隠れ層の出力 $h(t)$ は  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}(t) = f(U\\mathbf{x}(t) + W\\mathbf{h}(t-1) + \\mathbf{b})\n",
+    "\\end{align*}\n",
+    "\n",
+    "出力層の出力 $y(t)$ は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "y(t) = g(V\\mathbf{h}(t) + \\mathbf{c})\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表される。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "隠れ層、出力層にて活性化関数へ入力される重み付き和をそれぞれ $\\mathbf{p}(t), \\mathbf{q}(t)$ とする。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{p}(t) :=& U\\mathbf{x}(t) + W\\mathbf{h}(t-1) + \\mathbf{b} \\\\\n",
+    "\\mathbf{q}(t) :=& V\\mathbf{h}(t) + \\mathbf{c}\n",
+    "\\end{align*}"
    ]
   },
   {
