BPTT equation added

--- a/Syoukai_DeepLearning_5.ipynb
+++ b/Syoukai_DeepLearning_5.ipynb
@@ -112,12 +112,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "source": [
+    "このとき、隠れ層および出力層における誤差項\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{e}_{h}(t) :=& \\frac{\\partial E}{\\partial \\mathbf{p}(t)} \\\\\n",
+    "\\mathbf{e}_{o}(t) :=& \\frac{\\partial E}{\\partial \\mathbf{q}(t)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "に対して\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial E}{\\partial U} & = \\frac{\\partial E}{\\partial \\mathbf{p}(t)} \\left( \\frac{\\partial \\mathbf{p}(t)}{\\partial U} \\right)^{T} & = \\mathbf{e}_{h}(t)\\mathbf{x}(t)^{T} \\\\\n",
+    "\\frac{\\partial E}{\\partial V} & = \\frac{\\partial E}{\\partial \\mathbf{q}(t)} \\left( \\frac{\\partial \\mathbf{q}(t)}{\\partial U} \\right)^{T} & = \\mathbf{e}_{o}(t)\\mathbf{h}(t)^{T} \\\\\n",
+    "\\frac{\\partial E}{\\partial W} & = \\frac{\\partial E}{\\partial \\mathbf{p}(t)} \\left( \\frac{\\partial \\mathbf{p}(t)}{\\partial W} \\right)^{T} & = \\mathbf{e}_{h}(t)\\mathbf{h}(t-1)^{T} \\\\\n",
+    "\\, \\\\\n",
+    "\\frac{\\partial E}{\\partial \\mathbf{b}} & = \\frac{\\partial E}{\\partial \\mathbf{p}(t)} \\odot \\frac{\\partial \\mathbf{p}(t)}{\\partial \\mathbf{b}} & = \\mathbf{e}_{h}(t) \\\\\n",
+    "\\frac{\\partial E}{\\partial \\mathbf{c}} & = \\frac{\\partial E}{\\partial \\mathbf{q}(t)} \\odot \\frac{\\partial \\mathbf{q}(t)}{\\partial \\mathbf{c}} & = \\mathbf{e}_{o}(t) \n",
+    "\\end{align*}\n",
+    "\n",
+    "となり、隣り合う層から逆伝播する誤差項のみを考えるというアプローチに変化はない。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "前のノートブックまでとの違いとして、今回はクラスでなく値を予測するため  \n",
+    "出力層の活性化関数は恒等関数、誤差関数は下記のような二乗誤差（二乗平均誤差）を用いる。  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "E := \\frac{1}{2} \\sum_{n=1}^{N} \\sum_{t=1}^{T} || \\mathbf{t}_{n} - \\mathbf{y}_{n} ||^{2}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### BackPropagation Through Time\n",
+    "　参考：  \n",
+    " - [数式で書き下すリカレントニューラルネットワーク](https://micin.jp/feed/developer/articles/rnn000)  \n",
+    " - [【前編】深層学習による自然言語処理 - ニューラル機械翻訳への理論 -](http://deeplearning.hatenablog.com/entry/neural_machine_translation_theory)  \n",
+    " - [Statistical Language Models Based on Neural Networks](http://www.fit.vutbr.cz/~imikolov/rnnlm/google.pdf)   \n",
+    " - [Recurrent Neural Networks](https://www.slideshare.net/beam2d/pfi-seminar-20141030rnn)  \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RNNのBackPropagation手法としては BPTT(BackPropagation Through Time) が代表的である。  \n",
+    "これは、上記の誤差逆伝播を時間について展開したとき  \n",
+    "誤差が時間を遡って逆伝播しているように表されることからついた名前である。  \n",
+    "    \n",
+    "ある時間ステップtにおいて、まず１ステップ分だけ過去に遡って逆伝播することを考えると、  \n",
+    "  \n",
+    "\\begin{align*}\n",
+    "\\mathbf{e}_{h}(t-1) = \\frac{\\partial E}{\\partial \\mathbf{p}(t-1)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。これを変形して\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{e}_{h}(t-1) &= \\frac{\\partial E}{\\partial \\mathbf{p}(t)} \\odot \\frac{\\partial \\mathbf{p}(t)}{\\partial \\mathbf{p}(t-1)} \\\\\n",
+    "&= \\mathbf{e}_{h}(t) \\odot \\left( \\frac{\\partial \\mathbf{p}(t)}{\\partial \\mathbf{h}(t-1)}\\frac{\\partial \\mathbf{h}(t-1)}{\\partial \\mathbf{p}(t-1)} \\right) \\\\\n",
+    "&= \\mathbf{e}_{h}(t) \\odot \\left( Wf^{\\prime}(\\mathbf{p}(t-1)) \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。このとこから再帰式は、任意の０または正の整数 $z \\, (z=0,1,\\dots)$ について\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{e}_{h}(t-z-1) = \\mathbf{e}_{h}(t-z) \\odot \\left( Wf^{\\prime}(\\mathbf{p}(t-1)) \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表すことができるので、全ての勾配を計算できる。  \n",
+    "ただし無制限に遡って計算した場合、（上の例のような単純な）RNNにおいては不安定勾配問題を避けられないため、  \n",
+    "遡るステップ数上限を $\\tau$ として  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "U(t+1) &= U(t) - \\eta \\sum^{\\tau}_{z=0} \\mathbf{e}_{h}(t-z) \\mathbf{x} (t-z)^{T} \\\\\n",
+    "V(t+1) &= V(t) - \\eta \\mathbf{e}_{o}(t) \\mathbf{h} (t)^{T} \\\\\n",
+    "W(t+1) &= W(t) - \\eta \\sum^{\\tau}_{z=0} \\mathbf{e}_{h}(t-z) \\mathbf{x} (t-z-1)^{T} \\\\\n",
+    "\\mathbf{b}(t+1) &= \\mathbf{b}(t) - \\eta \\sum^{\\tau}_{z=0} \\mathbf{e}_{h}(t-z) \\\\\n",
+    "\\mathbf{c}(t+1) &= \\mathbf{c}(t) - \\eta \\mathbf{e}_{o}(t)\n",
+    "\\end{align*}\n",
+    "\n",
+    "のように各パラメータの更新式を表し、 $\\tau = 10 \\sim 100$ とすることが多い。\n",
+    "  \n",
+    "このようにステップ数上限を定めるため、 $\\tau$ を超える長期依存 (long-term dependency) を学習できなくなる問題が生じる。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -137,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
