WIP : simple RNN tensorflow code

--- a/Syoukai_DeepLearning_5.ipynb
+++ b/Syoukai_DeepLearning_5.ipynb
@@ -193,7 +193,7 @@
     "\\end{align*}\n",
     "\n",
     "と表すことができるので、全ての勾配を計算できる。  \n",
-    "ただし無制限に遡って計算した場合、（上の例のような単純な）RNNにおいては不安定勾配問題を避けられないため、  \n",
+    "ただし無制限に遡って計算した場合、（上の例のような）RNNにおいては不安定勾配問題を避けられないため、  \n",
     "遡るステップ数上限を $\\tau$ として  \n",
     "\n",
     "\\begin{align*}\n",
@@ -212,6 +212,60 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "---\n",
+    "WIP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### TensorFlowでの実装\n",
+    "時刻 $1, \\ldots, t$ までの観測値が与えられたときに、時刻 $t+1$ での値を予測する課題を解く。  \n",
+    "また $\\tau = 25$ として、訓練データセット中の各データは  \n",
+    "$\\left( [f(t-\\tau), f(t-\\tau+1), \\ldots, f(t) ], f(t+1) \\right)$ という並びの観測値と正解データの組とする。  \n",
+    "  \n",
+    "TensorFlowでは [tf.nn.rnn_cell.BasicRNNCell](https://www.tensorflow.org/api_docs/python/tf/contrib/rnn/BasicRNNCell) として実装されているので、これを利用する。  \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "def toy_problem(x, T=100, ampli=0.05, add_noise=True):\n",
+    "    y = np.sin(x * np.pi * 2 / T)\n",
+    "    yu = y + ampli * np.random.uniform(-1., 1., x.size)\n",
+    "    return  yu if add_noise else y\n",
+    "\n",
+    "T = 100\n",
+    "X = np.arange(0, 2*T, 1.)\n",
+    "tau = 25\n",
+    "\n",
+    "train_data = []\n",
+    "target_data = []\n",
+    "\n",
+    "\n",
+    "# dataset\n",
+    "for i in range(T-tau+1):\n",
+    "    train_data.append(toy_problem(X[i:i+tau]).reshape(-1))\n",
+    "    target_data.append(toy_problem(X[i+tau]).reshape(-1))\n",
+    "\n",
+    "    X_train, X_test, Y_train, Y_test = train_test_split(train_data, target_data, train_size=0.8, test_size=0.2)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
