--- a/Syoukai_DeepLearning/old_Syoukai_DeepLearning_5.ipynb
+++ b/Syoukai_DeepLearning/old_Syoukai_DeepLearning_5.ipynb
@@ -227,7 +227,8 @@
     "また $\\tau = 25$ として、訓練データセット中の各データは  \n",
     "$\\left( [f(t-\\tau), f(t-\\tau+1), \\ldots, f(t) ], f(t+1) \\right)$ という並びの観測値と正解データの組とする。  \n",
     "  \n",
-    "TensorFlowでは [tf.nn.rnn_cell.BasicRNNCell](https://www.tensorflow.org/api_docs/python/tf/contrib/rnn/BasicRNNCell) として実装されているので、これを利用する。  \n",
+    "TensorFlowでは [tf.contrib.rnn.BasicRNNCell](https://www.tensorflow.org/api_docs/python/tf/contrib/rnn/BasicRNNCell) （またはtf.nn.rnn_cell.BasicRNNCell、内容同じ）  \n",
+    "として実装されているので、これを利用する。  \n",
     "  "
    ]
   },
@@ -267,6 +268,119 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# こっちを使う\n",
+    "\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "class BasicRNN(object):\n",
+    "    def __init__(self, n_in, n_hidden, n_ou):\n",
+    "        self.n_in = n_in\n",
+    "        self.n_hidden = n_hidden\n",
+    "        self.n_out = n_out\n",
+    "        self.weights = []\n",
+    "        self.biases = []\n",
+    "        \n",
+    "        self._x = None\n",
+    "        self._t = None\n",
+    "        self._keep_prob = None\n",
+    "        self._sess = None\n",
+    "        self._history = {'val_loss':[],\n",
+    "                         'val_acc':[]\n",
+    "                        }\n",
+    "        \n",
+    "    def weight_variable(self, shape): # from He et al.(2015), trancated normal dist. mean=0, sqrt(2/fan_in)\n",
+    "        initial = np.sqrt(2.0/shape[0]) * tf.truncated_normal(shape, stddev=0.01)\n",
+    "        return tf.Variable(initial)\n",
+    "    \n",
+    "    def bias_variable(self, shape):\n",
+    "        initial = tf.zeros(shape)\n",
+    "        return tf.Variable(initial)\n",
+    "    \n",
+    "    def inference(self, x, n_batch, tau=None):\n",
+    "        \n",
+    "        cell = tf.contrib.rnn.BasicRNNCell(self.n_hidden)\n",
+    "        initial_state = cell.zero_state(n_batch, tf.float32)\n",
+    "        outputs=[]\n",
+    "        \n",
+    "        with tf.variable_scope('basicRNN'):\n",
+    "            for t in range(tau):\n",
+    "                if t>0:\n",
+    "                    tf.get_variable_scope().reuse_variables()\n",
+    "                (cell_output, state) = cell(x[:, t, :], state)\n",
+    "                outputs.append(cell_output)\n",
+    "\n",
+    "        output = outputs[-1]\n",
+    "        \n",
+    "        W = self.weight_variable([n_hidden, n_out])\n",
+    "        b = self.bias_variable([n_out])\n",
+    "        y = tf.matmul(output, W) + b\n",
+    "        \n",
+    "        return y\n",
+    "    \n",
+    "    def loss(self, y, t, weights=1.0):\n",
+    "        # MSE = tf.reduce_mean(tf.square(y-t))\n",
+    "        MSE = tf.losses.mean_squared_error(labels=t, predictions=y, weights=weights)\n",
+    "        return MSE\n",
+    "    \n",
+    "    def training(self, loss)\n",
+    "        #optimizer = tf.train.GradientDescentOptimizer(lr=0.01)\n",
+    "        optimizer = tf.train.AdamOptimizer(learning_rate=0.001, beta1=0.9, beta2=0.999)\n",
+    "        train_step = optimizer.minimize(loss)\n",
+    "        return train_step\n",
+    "    \n",
+    "    #def accuracy(self, y, t):\n",
+    "        \n",
+    "    def fit(self, ):\n",
+    "        \n",
+    "    #def evaluate(self, X_test, Y_test):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example tf functional API\n",
+    "\n",
+    "import numpy as np\n",
+    "import keras\n",
+    "from keras.layers import Input, Dense\n",
+    "from keras.models import Model\n",
+    "from keras.optimizers import SGD\n",
+    "\n",
+    "# dataset\n",
+    "X = np.array([[0,0], [0,1], [1,0], [1,1]])\n",
+    "Y = np.array([[0], [1], [1], [0]])\n",
+    "\n",
+    "inputs = Input(shape=(2,))\n",
+    "\n",
+    "x = Dense(2, activation='sigmoid')(inputs)\n",
+    "predictions = Dense(1, activation='sigmoid')(x)\n",
+    "\n",
+    "model = Model(inputs=inputs, outputs=predictions)\n",
+    "model.compile(optimizer=SGD(lr=0.1),\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "model.fit(X, Y,\n",
+    "          epochs=6000,\n",
+    "          batch_size=4,\n",
+    "          verbose=0)\n",
+    "\n",
+    "proba = model.predict(X, batch_size=4)\n",
+    "classes = list(map(lambda x: [1] if x-0.5>=0 else [0], proba))\n",
+    "print('\\nclassified: \\n {} \\n'.format(Y==classes))\n",
+    "print('output probability:\\n {}'.format(proba))"
+   ]
   }
  ],
  "metadata": {
