WIP : code example of Batch Normalization

--- a/Syoukai_DeepLearning/Syoukai_DeepLearning_7.ipynb
+++ b/Syoukai_DeepLearning/Syoukai_DeepLearning_7.ipynb
@@ -609,7 +609,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# code example from the textbook pp.204-205\n",
+    "\n",
+    "    def inference(x, n_in, n_hiddens, n_out):\n",
+    "        def weight_variable(shape):\n",
+    "            initial = np.sqrt(2.0 / shape[0]) * tf.truncated_normal(shape)\n",
+    "            return tf.variable(initial)\n",
+    "        \n",
+    "        def bias_variable(shape):\n",
+    "            initial = tf.zeros(shape)\n",
+    "            return tf.Variable(initial)\n",
+    "        \n",
+    "        def batch_normalization(shape, x):\n",
+    "            epsilon = 1e-8\n",
+    "            bta = tf.Variable(tf.zeros(shape))\n",
+    "            gamma = tf.Variable(tf.ones(shape))\n",
+    "            mean, var = tf.nn.moments(x, [0])\n",
+    "            return gamma * (x - mean) / tf.sqrt(var + eps) + beta\n",
+    "        \n",
+    "        for i, n_hidden in enumerate(n_hiddens):\n",
+    "            if i==0:\n",
+    "                input_data = x\n",
+    "                input_dim = n_in\n",
+    "            else:\n",
+    "                input_data = output\n",
+    "                input_dim = n_hiddens[i-1]\n",
+    "                \n",
+    "            W = weight_variable([input_dim, n_hidden])\n",
+    "            u = tf.matmul(input, W)\n",
+    "            h = batch_normalization([n_hidden], u)\n",
+    "            output = tf.nn.relu(h)\n",
+    "            \n",
+    "        w_out = weight_variable([n_hiddens[-1], n_out])\n",
+    "        b_out = bias_variable([n_out])\n",
+    "        y = tf.nn.softmax(tf.matmul(output, W_out) + b_out)\n",
+    "        return y\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
@@ -629,9 +666,11 @@
     "ハエの嗅覚野にてLSH（Locality-Sensitive Hashing）に相当する処理が行われていると主張している。  \n",
     " - １層目：臭いの入力を、異なる臭いの種類と濃度に対して同じ平均を持つように正規化した発火率の指数分布に変換  \n",
     " - ２層目：入力50から出力2000へ、疎かつ二値のランダム射影  \n",
-    " - ３層目：APLから抑制性フィードバックを受け、Winner Takes All 則により上位5%のみを残す。これがhash値として働く  \n",
+    " - ３層目：APLから抑制性フィードバックを受け、Winner Takes All 則により上位5%のみを残す。これがhash値として働く   \n",
     "  \n",
-    "Table 1. The fenerality of locality-sensitive hashing in the brain.:\n",
+    "ー　＊　ー    \n",
+    "  \n",
+    "Table 1. The fenerality of locality-sensitive hashing in the brain. \n",
     "\n",
     "||Step 1|Random projection|Step 2 (expansion)|Step 3 (WTA)|\n",
     "|:--|-:-|-:-|-:-|\n",
