--- a/The_Elements_of_Statistical_Learning_1.ipynb
+++ b/The_Elements_of_Statistical_Learning_1.ipynb
@@ -11,17 +11,42 @@
     "発行　共立出版,  2014年06月  \n",
     "ISBN　978-4-320-12362-5  \n",
     "  \n",
-    "このnotebookでは初版4刷を使って学習する。"
+    "[Official Site](https://web.stanford.edu/~hastie/ElemStatLearn/)  \n",
+    "  \n",
+    "このnotebookでは初版4刷を使って学習する。  "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "WIP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 第1章　序章\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 第2章　教師あり学習の概要\n",
+    "\n",
+    "### 導入\n",
+    "\n",
+    "### 変数の種類と用語\n",
+    "\n",
+    "### 予測のための2つの簡単なアプローチ：最小二乗法と最近傍法\n",
+    "\n",
+    "### "
+   ]
   }
  ],
  "metadata": {
