--- a/The_Elements_of_Statistical_Learning/ESL_2.ipynb
+++ b/The_Elements_of_Statistical_Learning/ESL_2.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  最小二乗法 (least squares) \n",
+    "###  2.3.1 最小二乗法 (least squares) \n",
     "残差二乗和  \n",
     "\n",
     "\\begin{align*}\n",
@@ -163,7 +163,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 最近傍法\n",
+    "### 2.3.2 最近傍法\n",
     "最近傍法では $\\hat{Y}$ を予測する際に、入力 $x$ に最も近い訓練データ集合の観測値を利用する。  \n",
     "すなわち、$k$ 最近傍法による $\\hat{Y}$ の予測は  \n",
     "\n",
@@ -300,7 +300,60 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 最小二乗法から最近傍法へ\n"
+    "### 2.3.3 最小二乗法から最近傍法へ\n",
+    "最小二乗法による線形当てはめは、分散が小さく、バイアスが大きい。  \n",
+    "k最近傍法は分散が大きく、バイアスが小さい。  \n",
+    "現代のデータ分析に使われる方法の多くは、これら２つの手法から派生したものである。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 2.4 統計的決定理論\n",
+    "モデルを系統的に理解するため、理論の導入を行う。  \n",
+    "  \n",
+    "$X \\in \\mathbb{R}^{p}$ を実数の確率入力ベクトル、$Y \\in \\mathbb{R}$ を実数の確率出力変数とし、  \n",
+    "これらが同時確率分布 $Pr(X,Y)$ に従うとする。   \n",
+    "入力 $X$ が与えられたとき、$Y$ を予測する関数 $f(X)$ を見つけることが目標となる。   \n",
+    "また、予測に対する罰則を定義するため損失関数 $L(Y,f(X))$ を導入する。    \n",
+    "  \n",
+    "損失関数のうち、二乗誤差損失 (squared error loss) $L(Y,f(X)) = (Y-f(X))^{2}$ が最も頻用される。  \n",
+    "二乗誤差損失を用いると、$f$ を選ぶ基準として、期待(二乗)予測誤差  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "EPE(f) &= E(Y-f(X))^{2} \\\\\n",
+    "&= \\int [y-f(x)]^{2} Pr(dx,dy)\n",
+    "\\end{align*}\n",
+    "\n",
+    "を用いることになる。同時分布を $X$ で条件付けすることにより、EPEは\n",
+    "\n",
+    "\\begin{align*}\n",
+    "EPE(f) = E_{X}E_{Y|X} ([Y-f(X)]^{2} | X)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表される。よってEPEを最小化するには、各 $x$ について最小化を行えばよく\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(x) = \\underset{c}{\\operatorname{argmin}} E_{Y|X} ([Y-c]^{2}|X=x)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と求められる。この解は条件付き期待値\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(x) = E(Y|X=x)\n",
+    "\\end{align*}\n",
+    "\n",
+    "であり、回帰関数 (regression function) と呼ばれることもある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "最近傍法は、訓練データを用いて条件付き期待値を直接推定する方法と解釈できる。  \n",
+    "  "
    ]
   }
  ],
