--- a/The_Elements_of_Statistical_Learning/ESL_2.ipynb
+++ b/The_Elements_of_Statistical_Learning/ESL_2.ipynb
@@ -352,8 +352,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "最近傍法は、訓練データを用いて条件付き期待値を直接推定する方法と解釈できる。  \n",
-    "  "
+    "---\n",
+    "最近傍法は、訓練データを用いて条件付き期待値を直接推定する方法と解釈できる。    \n",
+    "ある点 $x$ について条件付き期待値を推定するには  \n",
+    "入力が $x_{i}=x$ となっている訓練データを集め、対応する $y_{i}$ の平均を推定値とすればよいが、   \n",
+    "ちょうど $x_{i}=x$ となる観測値はたかだか１つであるため、$k$ 最近傍法では  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{f}(x) = Ave(y_{i}|x_{i}\\in N_{k}(x))\n",
+    "\\end{align*}\n",
+    "\n",
+    "によってこの問題を近似している。ここで、Aveは平均、  \n",
+    "$N_{k}(x)$ は $x$ に最も近い集合 $\\mathcal{T}$ 内の $k$ 個の訓練データにより定義される近傍である。  \n",
+    "この近似は  \n",
+    " - 期待値を標本データの平均により近似する  \n",
+    " - 任意の点 $x$ を、その点の近傍領域によって近似する  \n",
+    "\n",
+    "という２つの近似を含んでいる。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "訓練データ $N$ が大きければ、近傍点が $x$ の近くに位置すると考えてよい。   \n",
+    "同時分布 $Pr(X,Y)$ に関する緩やかな正則条件のもとで   \n",
+    "$k/N \\rightarrow 0$ となるように $N,k \\rightarrow \\infty$ とすれば $\\hat{f} \\rightarrow E(Y|X=x)$ となることを証明できる。  \n",
+    "すなわち、十分な大きさの訓練データがあれば、これは万能な近似モデルとして扱うことができる。  \n",
+    "  \n",
+    "ただし現実には十分な大きさのデータを得られない状況が多く、  \n",
+    "データに関する仮定そのものもデータから推測する必要がある。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "線形回帰について同様に考える。  \n",
+    "簡便のため、回帰関数 $f(x)$ が近似的に $x$ の線形関数として\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(x) \\approx x^{T}\\beta\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表されると仮定する。このような考え方はモデルに基づくアプローチと呼ばれる。  \n",
+    "  \n",
+    "線形モデル $f(x)$ を期待予測誤差 $EPE(f)$ に代入し、これを $\\beta$ に関して偏微分したものを０とおくと、\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\beta = [E(XX^{T})]^{-1}E(XY)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表すことができる。"
    ]
   }
  ],
