--- a/The_Elements_of_Statistical_Learning/ESL_2.ipynb
+++ b/The_Elements_of_Statistical_Learning/ESL_2.ipynb
@@ -828,15 +828,49 @@
     "高次元データを扱うのであれば、全ての方向に関して局所性を持つような近傍は適切でない。  \n",
     "\n",
     "（注：この主張は著者のものであるが、少なくとも執筆時点の2009年当時では正しいと思われる。  \n",
-    "　　　また、CNNなど深層学習の一般的なモデルでは、モデルの構造が制約の１つとして働く。）"
+    "　　　また、CNNなど深層学習の一般的なモデルでは、モデルの構造が制約として働くことが知られている。）"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "## 2.8 制限付き推定法\n",
+    "回帰や学習の手法を、用いる制約によっていくつかのクラスに分類して考える。  \n",
+    "それぞれのクラスには局所的な近傍の大きさを決定するための平滑化パラメータが付随する。\n",
+    "\n",
+    "###  粗度に対する罰則とベイズ法\n",
+    "残差二乗和 $\\operatorname{RSS}(f)$ に粗度に対する罰則を加え\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\operatorname{PRSS}(f;\\lambda) = \\operatorname{RSS}(f) + \\lambda J(f)\n",
+    "\\end{align*}\n",
+    "\n",
+    "を最小化することで関数のクラスを制限する。  \n",
+    "ユーザの指定による汎関数 $J(f)$ は関数 $f$ が入力空間内の小さな領域で急激に変化する場合に大きな値を取る。  \n",
+    "一例として、３次平滑化スプライン (cubic smoothing spline) は、次の罰則付き最小二乗規準  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\operatorname{PRSS}(f;\\lambda) = \\sum_{i=1}^{N} (y_{i} - f(x_{i}))^{2} + \\lambda \\int [f''(x)]^{2} dx\n",
+    "\\end{align*}\n",
+    "\n",
+    "を最小化する。  \n",
+    "ここで粗度に関する罰則は $f''$ の大きさを制限しており、   \n",
+    "$\\lambda=0$ のとき罰則無し、$\\lambda=\\infty$ の場合に解は $x$ 線形関数となる。  \n",
+    "\n",
+    "罰則関数を適切に選ぶことで、関数に特定の構造をもたせることができる。\n",
+    " - 加法的な罰則関数 $J(f) = \\sum_{j=1}^{p}J(f_{i})$ は加法的モデルと共に用いることで、<br />各変数に関して滑らかな関数からなる加法的モデルを作成するのに役立つ。\n",
+    " - 射影追跡回帰 (projectin pursuit regression; PPR) モデルは適応的に決める方向パラメータ $\\alpha$ を用いて<br />$f(X) = \\sum_{m=1}^{M}g_{m}(\\alpha^{T}_{m}X)$ と表される。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### カーネル法と局所回帰"
+   ]
   }
  ],
  "metadata": {
