--- a/The_Elements_of_Statistical_Learning/ESL_2.ipynb
+++ b/The_Elements_of_Statistical_Learning/ESL_2.ipynb
@@ -869,7 +869,56 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### カーネル法と局所回帰"
+    "### カーネル法と局所回帰\n",
+    "局所的な近傍の決め方や当てはめる関数を直接指定し、会期関数や条件付き期待値を明示的に推定する手法である。    \n",
+    "局所的な近傍は**カーネル関数** (Kernel function) $K_{\\lambda}(x_{0},x)$ を用いて定義される。  \n",
+    "\n",
+    "たとえばガウスカーネルは\n",
+    "\n",
+    "\\begin{align*}\n",
+    "K_{\\lambda}(x_{0}, x) = \\frac{1}{\\lambda} \\exp \\left[ -\\frac{||x-x_{0}||^{2}}{2 \\lambda} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "と定義される。  \n",
+    "このカーネル関数は $x_{0}$ からのユークリッド距離に応じて指数的に減衰する重みを割り当てるもので、  \n",
+    "パラメータ $\\lambda$ はガウス分布の分散に相当し、近傍の幅を調節している。  \n",
+    "\n",
+    "カーネル推定で最も簡単なものはナダラヤ＝ワトソン重み付け平均で\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{f}(x_{0}) = \\frac{\\sum_{i=1}^{N} K_{\\lambda} (x_{0}, x_{i})y_{i}}{\\sum_{i=1}^{N} K_{\\lambda} (x_{0}, x_{i})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表される。\n",
+    "\n",
+    "一般に、局所回帰による $f(x_{0})$ の推定値は $f_{\\hat{\\theta}}(x_{0})$ と表され、\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\theta &= \\operatorname*{argmin}_{\\theta} \\left( \\operatorname{RSS}(f_{\\theta}, x_{0}) \\right) \\\\\n",
+    "\\operatorname{RSS}(f_{\\theta}, x_{0}) &= \\sum_{i=1}^{N} K_{\\lambda} (x_{0}, x_{i}) (y_{i} - f_{\\theta}(x_{i}))^{2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "であり、例えば $f_{\\theta}(x) = \\theta_{0}$ のときナダラヤ＝ワトソン推定量、  \n",
+    "$f_{\\theta}(x) = \\theta_{0} \\theta_{1}x$ とすると局所線形回帰モデルとなる。\n",
+    "\n",
+    "最近傍法はデータに依存する計量を用いたカーネル法とみなすことができる。  \n",
+    "k-NNでの計量は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "K_{k}(x,x_{0}) = I(||x-x_{0}|| \\leq ||x_{(k)} - x_{0}||)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表される。ここで$x_{(k)}$ は $x_{0}$ から $k$ 番目に離れた訓練データ、  \n",
+    "$I(S)$ は集合 $S$ に対する指示関数である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 基底関数と辞書による方法\n",
+    "\n"
    ]
   }
  ],
