--- a/NLP_by_Deep_Learning/NLP_by_DL_1.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_1.ipynb
@@ -54,10 +54,44 @@
    "source": [
     "---\n",
     "### 1.2　深層学習への期待\n",
-    "・応用タスクを直接的に解いた研究結果がより大きな注目を集めている\n",
-    "　-> 既存の言語解析器パイプライン全てをNNで置き換える\n",
-    "　既存のシステムでは個々の解析器が独立に学習されるのに対し、\n",
-    "　深層学習によるモデルは内部表現も含めて学習される"
+    "・応用タスクを直接的に解いた研究結果がより大きな注目を集めている  \n",
+    "　-> 既存の言語解析器パイプライン全てをNNで置き換える  \n",
+    "　既存のシステムでは個々の解析器が独立に学習されるのに対し、  \n",
+    "　深層学習によるモデルは内部表現も含めて学習される  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 1.3　テキストデータの特徴\n",
+    "自然言語処理では単語を処理の単位（トークン）とし、  \n",
+    "文を１つの記号列としてまとめて処理することが一般的である。  \n",
+    "２単語以上の文法的／意味的な集まりを句（phrase）と呼び、処理単位とすることもある。  \n",
+    "単語の種類である語彙数は有限だが、文は無限に存在する。  \n",
+    "\n",
+    "入力データを単語などへ分割する手続きは自明でない。  \n",
+    "現状としては恣意的な定義に基づいて分割している。  \n",
+    "\n",
+    "自然言語処理では離散記号からなる可変長の記号列を扱う。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 1.4　他分野への広がり\n",
+    "可変長の記号列を扱う分野は多く、自然言語処理の知見はそれらへ応用できる可能性がある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "次のnotebookへ続く。"
    ]
   }
  ],
