--- a/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
@@ -26,7 +26,8 @@
     "\\end{align*}\n",
     "\n",
     "自然言語処理では出力は単語のように離散集合 $\\mathcal{Y} = \\{1, \\ldots, |\\mathcal{Y}| \\}$ であることが多く、分類問題として定式化できる。  \n",
-    "分類問題では次の交差エントロピー損失関数と（多クラス）ヒンジ損失関数がよく用いられる。\n",
+    "分類問題では 0-1損失関数の代理損失（surrogate loss）として、  \n",
+    "次の交差エントロピー損失関数と（多クラス）ヒンジ損失関数がよく用いられる。\n",
     "\n",
     "・cross-entropy loss\n",
     "\n",
@@ -39,6 +40,40 @@
     "\\begin{align*}\n",
     "l_{\\theta}^{\\text{hinge}}\\left( \\mathbf{x}^{(n)}, y^{(n)} \\right) = \\max \\left( 0, \\, 1 - f_{\\theta}\\left( \\mathbf{x}^{(n)}, y^{(n)} \\right) + \\max_{\\tilde{y} \\in {\\mathcal{Y} \\\\ \\{y^{(n)}\\}} } f_{\\theta}( \\mathbf{x}^{(n)}, \\tilde{y}) \\right)\n",
     "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "$f_{\\theta}(\\mathbf{x},y)$ は $\\theta$ をパラメータとするスコア関数で、$\\hat{y} = \\operatorname{argmax}_{y} f_{\\theta}(\\mathbf{x}^{(n)}, y)$ を予測として使用することを想定している。  \n",
+    "注記なき限りスコア関数はニューラルネットによる実装とする。\n",
+    "\n",
+    "誤差関数として交差エントロピー、スコア関数 $f_{\\theta}(\\mathbf{x},y)$ を線形モデルとするとき多項ロジスティック回帰という。  \n",
+    "交差エントロピー損失関数は以下の条件付き確率モデルを想定し、  \n",
+    "その負の対数尤度を想定していると考えることもできる。  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{\\theta}(y|\\mathbf{x}) = \\frac{\\exp ( f_{\\theta} (\\mathbf{x},y))}{\\sum_{\\tilde{y} \\in \\mathcal{Y}} \\exp ( f_{\\theta} ( \\mathbf{x}, \\tilde{y}))}\n",
+    "\\end{align*}\n",
+    "\n",
+    "交差エントロピー損失関数は、真の分布 $P^{*}_{\\theta}(y|\\mathbf{x})$ とモデル $P_{\\theta}(y|\\mathbf{x})$ との距離を表す交差エントロピーを  \n",
+    "訓練データで経験近似していることに相当することからそう呼ばれる。\n",
+    "\n",
+    "ソフトマックス関数\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\operatorname{softmax}(\\mathbf{o})_{y} = \\frac{\\exp (o_{y})}{\\sum_{\\tilde{y} \\in \\mathcal{Y}} \\exp (o_{y})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "を用いると、上の式は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{\\theta}(y|\\mathbf{x}) = \\operatorname{softmax}(\\mathbf{o})_{y}\n",
+    "\\end{align*}\n",
+    "\n",
+    "と書くことができる。"
    ]
   },
   {
