--- a/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
@@ -80,7 +80,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n"
+    "---\n",
+    "### 2.2　順伝播型ニューラルネット\n",
+    "非線形変換を $L$ 回繰り返すFFNN (feedforward neural network) を想定する。  \n",
+    "$l$ 回目の変換結果の出力ベクトル $\\mathbf{h}^{(l)} \\in \\mathcal{R}^{N^{(1)}}$ を隠れ状態ベクトルと呼ぶ。  \n",
+    "\n",
+    "出力層からの出力候補 $y$ に対するスコアの計算は $|\\mathcal{Y}| \\times N^{(L)}$ のパラメータ行列 $\\mathbf{W}^{(o)}$ と  \n",
+    "バイアスパラメータベクトル $\\mathbf{b}^{(o)}$ を使って以下のように表す。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{o} = \\mathbf{W}^{(o)}\\mathbf{h}^{(L)} + \\mathbf{b}^{(o)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "次に、各層の隠れ状態ベクトル $\\mathbf{h}^{(l)} \\, (l=1,\\ldots,L)$ は活性化関数を $a$ として\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}^{(l)} = a^{(l)} \\left( \\mathbf{W}^{(l)}\\mathbf{h}^{(l-1)} + \\mathbf{b}^{(l)} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表される。ここで $l=0$ のとき $\\mathbf{h}^{0} = \\mathbf{x}$ （$x$ は入力）とする。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.3　活性化関数\n",
+    "シグモイド関数、tanh、ReLUなどがよく用いられる。  \n",
+    "活性化関数は非線形でなければならない。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.4　勾配法"
    ]
   }
  ],
