--- a/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
@@ -116,7 +116,45 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 2.4　勾配法"
+    "### 2.4　勾配法\n",
+    "学習率を $\\eta$ とするとき、次の更新式によって学習する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\theta^{(k+1)} = \\theta^{(k)} - \\eta \\partial L(\\theta^{(k)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "勾配法は局所的な最急降下方向に $\\eta$ に比例してパラメータを変化させる。\n",
+    "\n",
+    "バッチ法による勾配降下法を行うとき、  \n",
+    "損失関数の偏微分は個々のデータにおける偏微分の和に分解できる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\partial L(\\theta)^{batch} \\frac{1}{|\\mathcal{D}|} \\sum_{n=1}^{|\\mathcal{D}|} \\partial l_{\\theta}(\\mathbf{x}^{(n)}, y^{(n)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "バッチ法では訓練データ全てについての計算が必要なことから、  \n",
+    "ランダムに選んだ事例で近似する確率的勾配法がよく用いられる。  \n",
+    "１事例のみを用いるオンライン確率的勾配法では次のように近似する。$i$ はランダムに選んだ事例の番号。  \n",
+    "　（メモ：原文中の式に $i$ 見当たらず）\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\partial L(\\theta)^{\\text{online}} = \\partial l_{\\theta} (\\mathbf{x}^{(n)}, y^{(n)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "ミニバッチ確率的勾配法では次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\partial L(\\theta)^{\\text{mini-batch}} = \\frac{1}{|\\mathcal{B}|} \\sum_{m=1}^{|\\mathcal{B}|} \\partial l_{\\theta} (\\mathbf{x}^{(\\mathcal{B}[m])}, y^{(\\mathcal{B}[m])})\n",
+    "\\end{align*}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.5　誤差逆伝播法\n"
    ]
   }
  ],
