--- a/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
@@ -154,8 +154,97 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 2.5　誤差逆伝播法\n"
+    "### 2.5　誤差逆伝播法\n",
+    "(他のnotebookで取り扱ったため省略）"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.6　再帰ニューラルネット\n",
+    "Recurrent Neural Networksでは、長さ $T$ の入力ベクトル列 $\\mathbf{X} = (\\mathbf{x}_{1}, \\mathbf{x}_{2}, \\ldots, \\mathbf{x}_{T_{x}})$ が与えられたとき、  \n",
+    "$l$ 層目の隠れ状態ベクトルを次のとおりに再帰的に更新する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{t}^{(l)} = a^{(l)} \\left( \\mathbf{W}^{(l)} \\left[ \\begin{array} \\mathbf{h}_{t}^{(l-1)} \\\\\\mathbf{h}_{t-1}^{(l)} \\end{array} \\right] + \\mathbf{b}^{(l)} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "RNNでは時刻 $t$ の $l-1$ 層目の隠れ状態ベクトルと時刻 $t-1$ の $l$ 層目の隠れ状態ベクトルを線形変換することから  \n",
+    "パラメータ行列 $\\mathbf{W}^{(l)}$ の要素数は $(N^{(l)} + N^{(l-1)}) \\times N^{(l)}$ となる。  \n",
+    "また、パラメータの初期値 $\\mathbf{h}_{0}^{(l)}$ としては零ベクトルなど定数値が使われることが多い。\n",
+    "\n",
+    "スコア関数は $\\mathbf{h}_{t}^{(L)}$ を用いて次のように計算する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(\\mathbf{x}, y) &= o_{t,y} \\\\\n",
+    "\\mathbf{o}_{t} &= \\mathbf{W}^{(o)} \\mathbf{h}_{t}^{(L)} + \\mathbf{b}^{(o)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "RNNは時間方向に深いモデルとなっていること、時刻 $t$ によらない共通のパラメータを用いることが特徴である。  \n",
+    "誤差逆伝播法は時間鳳凰に遡ることからBPTTと呼ばれることがあるが、計算グラフ上は大きな違いがない。  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 双方向再帰ニューラルネット（bi-directional RNN）\n",
+    "時間の前向き方向と後ろ向き方向の走査を組み合わせた双方向RNNはよく用いられる。  \n",
+    "前向き走査の隠れ状態ベクトル $\\overrightarrow{\\mathbf{h}}$ と後ろ向き走査の隠れ状態ベクトル $\\overleftarrow{\\mathbf{h}}$ を次の式に従って計算する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\overrightarrow{\\mathbf{h}}_{t}^{(l)} &= a^{(l)} \\left( \\overrightarrow{W}^{(l)} \\left[ \\begin{array} \\overrightarrow{\\mathbf{h}}_{t}^{(l-1)} \\\\ \\overleftarrow{\\mathbf{h}}_{t}^{(l-1)} \\\\ \\overrightarrow{\\mathbf{h}}_{t-1}^{(l)} \\end{array} \\right] + \\overrightarrow{\\mathbf{b}}^{(l)} \\right) \\\\\n",
+    "\\overleftarrow{\\mathbf{h}}_{t}^{(l)} &= a^{(l)} \\left( \\overleftarrow{W}^{(l)} \\left[ \\begin{array} \\overrightarrow{\\mathbf{h}}_{t}^{(l-1)} \\\\ \\overleftarrow{\\mathbf{h}}_{t}^{(l-1)} \\\\ \\overrightarrow{\\mathbf{h}}_{t+1}^{(l)} \\end{array} \\right] + \\overleftarrow{\\mathbf{b}}^{(l)} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "出力 $\\mathbf{o}_{t}$ については次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{o}_{t} = \\mathbf{W}^{(o)} \\left[ \\begin{array} \\overrightarrow{\\mathbf{h}}_{t}^{(L)} \\\\ \\overleftarrow{\\mathbf{h}}_{t}^{(L)} \\end{array} \\right] + \\mathbf{b}^{(o)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "上の式では各層で双方向の隠れ状態ベクトルを計算に用いるが  \n",
+    "この部分は手法により様々で、例えば逆向きの隠れ状態ベクトルを用いない計算式もある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### パラメータ行列の固有値による勾配不安定性の議論\n",
+    "パラメータ行列の固有値分解を次のように書く。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{W} = \\mathbf{Q} \\mathbf{\\Lambda} \\mathbf{Q}^{-1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "このときパラメータ行列の $t$ 乗は、$\\mathbf{Q}^{-1}\\mathbf{Q}$ が単位行列となることから次のようになる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{W}^{t} = \\mathbf{Q} \\mathbf{\\Lambda}^{t} \\mathbf{Q}^{-1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "よって、RNNの隠れ状態ベクトルについて $\\mathbf{h}_{t} = \\mathbf{W}\\mathbf{h}_{t-1}$ が成り立つとき、\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{t} &= \\mathbf{W}\\mathbf{h}_{t-1} = \\mathbf{W}^{2}\\mathbf{h}_{t-2} = \\cdots = \\mathbf{W}^{t}\\mathbf{h}_{0} \\\\\n",
+    "&= \\mathbf{Q} \\mathbf{\\Lambda}^{t} \\mathbf{Q}^{-1} \\mathbf{h}_{0}\n",
+    "\\end{align*}\n",
+    "\n",
+    "となることから、$t$ が大のとき固有値の値により状態変数の絶対値が強く影響されることとなる。  \n",
+    "ここから、パラメータ行列の固有値により勾配不安定性について議論することができる。  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
